--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "nodemon --watch src -e js,ts,json --exec \"ts-node src/index.ts\"",
-    "build": "tsup src/index.ts --format cjs --clean",
-    "start": "node dist/index.js"
+    "start-dev": "ts-node src/index.ts",
+    "start": "npm run build && node dist/src/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Swymn",
@@ -17,8 +17,6 @@
     "@types/node": "^18.11.8",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "tsup": "^6.3.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
