--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,38 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "target": "es2017",
+    "target": "ESNext",
     "module": "CommonJS",
+    "outDir": "./dist/",
     "lib": ["esnext"],
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "strict": true,
+    "moduleResolution": "Node",
     "strictNullChecks": true,
-    "resolveJsonModule": true,
     "skipDefaultLibCheck": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "outDir": "./dist",
     "strictPropertyInitialization": false,
-    "paths": {
-      "~/*": ["./src/*"],
-      "~~/*": ["./*"]
-    }
+    "strict": true,
+    "allowJs": true,
+    "importHelpers": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "removeComments": true,
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "sourceMap": false,
+    "baseUrl": "./",
   },
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  }
+  "files": [
+    "src/index.ts",
+  ],
+  "include": [
+    "src/**/*",
+  ],
+  "exclude": [
+    "node_modules",
+    "dist",
+  ]
 }
