--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose-unique-validator": "^1.0.6",
     "@types/node": "^18.11.8",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -25,6 +27,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.0",
+    "mongoose-unique-validator": "^3.1.0"
   }
 }
