--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.14",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose-unique-validator": "^1.0.6",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.8",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -29,6 +30,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "mongoose-unique-validator": "^3.1.0"
+    "mongoose-unique-validator": "^3.1.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
